--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.table-skeleton {
+    @apply rounded-lg overflow-hidden relative;
+    background: #e1e1e1;
+}
+
+.table-skeleton::before {
+    @apply block absolute top-0 -left-[150px]
+}
